fix bleeding images on mobile

--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -14,6 +14,7 @@ body {
 }
 
 img {
+	max-width: 100vw;
 	max-width: 100%;
 }
 
@@ -70,4 +71,8 @@ pre {
 	padding: 1rem;
 	background-color: #eee;
 	overflow-x: scroll;
+}
+
+.gatsby-image-wrapper {
+	max-width: 100%;
 }
